<resources>

    <string name="app_name">BookAStudent</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="drawer_text">asdasd</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Profile</item>
        <item >Browse jobs</item>
        <item >My jobs</item>
        <item >Community</item>
        <item >Ratings</item>
        <item >Contact</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <!--<array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_whats_hot</item>
    </array>-->

    <array name="nav_drawer_icons">
        <item>@drawable/ic_profile</item>
        <item>@drawable/ic_jobs</item>
        <item>@drawable/ic_myjobs</item>
        <item>@drawable/ic_com</item>
        <item>@drawable/ic_rating</item>
        <item>@drawable/ic_contact</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    //Nav bar second iteration
    <string name="navigation_item_1">Home</string>
    <string name="navigation_item_2">Events</string>

    <string name="MyJobs">My jobs</string>
    <string name="Home">Profile</string>
    <string name="FindJobs">Find a job</string>
    <string name="Rating">Ratings</string>
    <string name="Notifications">Notifications</string>

    <string name="subheader">Subheader</string>
    <string name="Settings">Settings</string>
    <string name="contact">Contact us</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>

    <string name="comp_home">Profile</string>
    <string name="comp_Jobs">My jobs</string>
    <string name="comp_Ratings">Ratings</string>
    <string name="comp_post">Post a job</string>


    <string name="admin_home">Overview</string>
    <string name="admin_db">Database</string>
    <string name="admin_notifications">Notifications</string>
    <string name="admin_settings">Settings</string>
    <string name="job_description">Do you enjoy working in a creative environment?\nAre you good in Android development?\n\n If the answer to these questions is YES, then this might be the job for you!</string>
    <string name="log_in">Logging in...</string>

    <string-array name="payment">
        <item>Pay per assignment</item>
        <item>Hourly payment</item>
    </string-array>




</resources>
