<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/Home"
            android:checked="false"
            android:icon="@drawable/ic_home_black"
            android:title="@string/Home" />

        <item
            android:id="@+id/MyJobs"
            android:checked="false"
            android:icon="@drawable/ic_myjobs_black"
            android:title="@string/MyJobs" />

        <item
            android:id="@+id/FindJobs"
            android:checked="false"
            android:icon="@drawable/ic_search_black"
            android:title="@string/FindJobs" />

        <item
            android:id="@+id/Rating"
            android:checked="false"
            android:icon="@drawable/ic_star_full"
            android:title="@string/Rating" />

        <item
            android:id="@+id/Notifications"
            android:checked="false"
            android:icon="@drawable/ic_notifications_black"
            android:title="@string/Notifications" />

        <item
            android:enabled="false"/>

        <item
            android:id="@+id/settings"
            android:checked="false"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/Settings" />
        <item
            android:id="@+id/contact"
            android:checked="false"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/contact" />

    </group>
</menu>