<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/AHome"
            android:checked="false"
            android:icon="@drawable/ic_home_black"
            android:title="@string/admin_home" />

        <item
            android:id="@+id/ADatabase"
            android:checked="false"
            android:icon="@drawable/ic_database_black"
            android:title="@string/admin_db" />

        <item
            android:id="@+id/ANotifications"
            android:checked="false"
            android:icon="@drawable/ic_notifications_black"
            android:title="@string/admin_notifications" />

        <item
            android:enabled="false"/>

        <item
            android:id="@+id/Asettings"
            android:checked="false"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/admin_settings" />
        <item
            android:id="@+id/contact"
            android:checked="false"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/contact" />

    </group>
</menu>